@@ -31,5 +31,6 @@
   "moleculeCount": "Molecule count",
   "ratio": "{0}/{1} ratio",
   "linear": "Linear",
-  "logarithmic": "Logarithmic"
+  "logarithmic": "Logarithmic",
+  "graph": "Graph"
 }
