@@ -1,3 +1,4 @@
+1/6/14 add multi-line labels to units ABSwitch, put 'Graph' in title bar
 1/6/14 change title in graph's bar when units are changed
 1/6/14 delete the rightTitle option from ExpandCollapseBar, add setTitle function
 1/6/14 show zoom buttons only for Linear scale
